Kubernetes/jpg/5/test1/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: nginx
        image: nginx:1.25.4
        volumeMounts:
          - name: data
            mountPath: /usr/share/nginx/html
        ports:
        - containerPort: 80
      volumes:
        - name: data
          emptyDir: {}
