Kubernetes/jpg/5/test1/service-hello.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello-svc
#  namespace: dz4
spec:
  selector:
    app: hello
  ports:
    - protocol: TCP
      name: nginx
      port: 9002
      targetPort: 80 
#  type: NodePort
