Kubernetes/jpg/5/test1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
#  namespace: dz5
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx123
  rules:
    - host: nginx123.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-hello-svc
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: nginx-api-svc
                port:
                  number: 9001
