Kubernetes/jpg/5/test1/ingress_copy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-01
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: example12345.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: nginx-hello-svc
                port:
                  number: 80
            path: /
          - pathType: Prefix
            backend:
              service:
                name: nginx-api-svc
                port:
                  number: 80
            path: /api
